# face_recognition_demo

./: .editorconfig  .gitattributes  .gitignore  FRONTEND_MILESTONE_1_PR.md  FRONTEND_MILESTONE_2_PLAN.md  LICENSE  MILESTONE-4-COMPLETED.md  MILESTONE-5-COMPLETED.md  MILESTONE-6-COMPLETED.md  MILESTONE_3_COMPLETE.md  MILESTONE_7_COMPLETE.md  MILESTONE_7_PR_SUMMARY.md  MILESTONE_8_COMPLETE.md  MILESTONE_8_HARDENING.md  MILESTONE_8_PR_SUMMARY.md  Makefile  PR-MILESTONE-6-ATTENDANCE-POLICY.md  PROJECT_COMPLETE.md  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/chatmodes/: Orchestrator.chatmode.md
.github/workflows/: ci.yml
backend/: Dockerfile  mvnw  pom.xml
backend/src/main/java/com/company/attendance/: AttendanceApplication.java
backend/src/main/java/com/company/attendance/config/: HttpClientConfig.java  SecurityConfig.java
backend/src/main/java/com/company/attendance/controller/: AttendanceController.java  AuthController.java  DeviceController.java  EmployeeController.java  RecognitionController.java
backend/src/main/resources/: application.yml
backend/src/main/resources/db/migration/: V2__create_core_tables.sql  V6__Create_attendance_policies_table.sql  V7__Add_dedup_hash_unique_constraint.sql
edge/: Dockerfile  README.md  demo.py  demo_file.py  pyproject.toml  requirements.txt  validate.ps1  validate_edge.py
edge/cache/: face_metadata.pkl
edge/edge/: __init__.py  config.py  enrollment_server.py  main.py  simple_config.py
edge/edge/pipeline/: __init__.py  embedding_extractor.py  face_detector.py  face_recognition_pipeline.py  face_tracker.py  index_sync.py  liveness_detector.py  recognition_publisher.py  rtsp_reader.py  snapshot_uploader.py
edge/edge/utils/: config_encryption.py
edge/tests/: test_config_encryption.py
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/layout/: AppLayout.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/api/: auth.ts  client.ts
frontend/src/lib/auth/: types.ts
frontend/src/stores/: auth.ts
infra/: .env.example
infra/minio/: create-bucket.sh
scripts/: config_encrypt.py  enroll_cli.py  generate_sample_faces.py  seed_demo_data.py  test_edge_enrollment.py  test_enrollment_e2e.py  validate_milestone_6.sh
(+51 files in other folders)
